@@ -7,13 +7,19 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 public class MembershipMessageProtocol {
-    public static String join(String nodeId, int port, int membershipCounter) {
-        return new GenericMessageProtocol()
+    public static String join(String nodeId, int port, int membershipCounter, Map<String, Integer> blacklist) {
+        
+        GenericMessageProtocol genericMessageProtocol = new GenericMessageProtocol()
                 .addHeaderEntry("JOIN")
                 .addHeaderEntry("node", nodeId)
                 .addHeaderEntry("port", String.valueOf(port))
-                .addHeaderEntry("counter", String.valueOf(membershipCounter))
-                .toString();
+                .addHeaderEntry("counter", String.valueOf(membershipCounter));
+        
+        for (Map.Entry<String, Integer> entry : blacklist.entrySet()) {
+            genericMessageProtocol.addHeaderEntry("blacklist", entry.getKey(), String.valueOf(entry.getValue()));
+        }
+        
+        return genericMessageProtocol.toString();
     }
 
     public static String leave(String nodeId, int membershipCounter) {
@@ -31,50 +37,60 @@ public class MembershipMessageProtocol {
             builder.append(member).append("\n");
         }
         builder.append("\n");
-        for (MembershipLogEntry entry : membershipView.getLog()) {
+        int logSize = Math.min(32, membershipView.getLog().size());
+        for (MembershipLogEntry entry : membershipView.getLog().subList(0, logSize)) {
             builder.append(entry.toString()).append("\n");
         }
 
         return new GenericMessageProtocol()
                 .addHeaderEntry("MEMBERSHIP")
+                .addHeaderEntry("node", membershipView.getNodeId())
                 .addHeaderEntry("members", String.valueOf(membershipView.getMembers().size()))
-                .addHeaderEntry("log", String.valueOf(membershipView.getLog().size()))
+                .addHeaderEntry("log", String.valueOf(logSize))
                 .setBody(builder.toString())
                 .toString();
     }
 
-    public static String reinitialize(String nodeId, int port) {
-        return new GenericMessageProtocol()
+    public static String reinitialize(String nodeId, int port, Map<String, Integer> blacklist) {
+        GenericMessageProtocol genericMessageProtocol = new GenericMessageProtocol()
                 .addHeaderEntry("REINITIALIZE")
                 .addHeaderEntry("node", nodeId)
-                .addHeaderEntry("port", String.valueOf(port))
-                .toString();
+                .addHeaderEntry("port", String.valueOf(port));
+
+        for (Map.Entry<String, Integer> entry : blacklist.entrySet()) {
+            genericMessageProtocol.addHeaderEntry("blacklist", entry.getKey(), String.valueOf(entry.getValue()));
+        }
+
+        return genericMessageProtocol.toString();
     }
 
     public static String membershipLog(MembershipView membershipView) {
         StringBuilder builder = new StringBuilder();
 
-        for (MembershipLogEntry entry : membershipView.getLog()) {
+        int logSize = Math.min(32, membershipView.getLog().size());
+        for (MembershipLogEntry entry : membershipView.getLog().subList(0, logSize)) {
             builder.append(entry.toString()).append("\n");
         }
 
         return new GenericMessageProtocol()
                 .addHeaderEntry("MEMBERSHIP")
-                .addHeaderEntry("log", String.valueOf(membershipView.getLog().size()))
+                .addHeaderEntry("node", membershipView.getNodeId())
+                .addHeaderEntry("log", String.valueOf(logSize))
                 .setBody(builder.toString())
                 .toString();
     }
 
     public static class Join extends MembershipMessageProtocol {
         private final String node;
-        private int membershipCounter;
-        private int port;
-        public Join(String node, int membershipCounter, int port) {
-            System.out.println("MAKE JOIN MESSAGE");
+        private final int membershipCounter;
+        private final int port;
+
+        private final Map<String, Integer> blacklist;
+        public Join(String node, int membershipCounter, int port, Map<String, Integer> blacklist) {
             this.node = node;
             this.membershipCounter = membershipCounter;
             this.port = port;
-            System.out.println("MADE JOIN MESSAGE");
+            this.blacklist = blacklist;
         }
 
         public String getId() {
@@ -88,11 +104,15 @@ public class MembershipMessageProtocol {
         public int getPort() {
             return port;
         }
+
+        public Map<String, Integer> getBlacklist() {
+            return blacklist;
+        }
     }
 
     public static class Leave extends MembershipMessageProtocol {
         private final String node;
-        private int membershipCounter;
+        private final int membershipCounter;
         public Leave(String node, int membershipCounter) {
             this.node = node;
             this.membershipCounter = membershipCounter;
@@ -108,11 +128,17 @@ public class MembershipMessageProtocol {
     }
 
     public static class Membership extends MembershipMessageProtocol {
-        private List<String> members;
-        private List<MembershipLogEntry> log;
-        public Membership(List<String> members, List<MembershipLogEntry> log) {
+        private final String node;
+        private final List<String> members;
+        private final List<MembershipLogEntry> log;
+        public Membership(String node, List<String> members, List<MembershipLogEntry> log) {
+            this.node = node;
             this.members = members;
             this.log = log;
+        }
+
+        public Membership(String node, List<MembershipLogEntry> log) {
+            this(node, null, log);
         }
 
         public List<String> getMembers() {
@@ -122,14 +148,20 @@ public class MembershipMessageProtocol {
         public List<MembershipLogEntry> getLog() {
             return log;
         }
+
+        public String getId() { return node; }
     }
 
     public static class Reinitialize extends MembershipMessageProtocol {
         private final String node;
-        private int port;
-        public Reinitialize(String node, int port) {
+        private final int port;
+
+        private final Map<String, Integer> blacklist;
+
+        public Reinitialize(String node, int port, Map<String, Integer> blacklist) {
             this.node = node;
             this.port = port;
+            this.blacklist = blacklist;
         }
 
         public String getId() {
@@ -138,6 +170,10 @@ public class MembershipMessageProtocol {
 
         public int getPort() {
             return port;
+        }
+
+        public Map<String, Integer> getBlacklist() {
+            return blacklist;
         }
     }
 
@@ -167,37 +203,47 @@ public class MembershipMessageProtocol {
         return log;
     }
 
+    private static List<MembershipLogEntry> parseLogEntries(String body, int logCount)
+            throws MessageProtocolException {
+        return parseLogEntries(body, -1, logCount);
+    }
+
     public static MembershipMessageProtocol parse(String message) throws MessageProtocolException {
         GenericMessageProtocol parsedMessage = new GenericMessageProtocol(message);
-        if (parsedMessage.getHeaders().size() == 0) {
-            System.out.println("WHAT");
-            throw new MessageProtocolException("Message is missing headers");
-        }
-        if (parsedMessage.getHeaders().get(0).size() != 1) {
-            System.out.println("WHAT 2???");
-            throw new MessageProtocolException("Unknown message '"
-                    + String.join(" ", parsedMessage.getHeaders().get(0)) + '\'');
-        }
-
-        List<List<String>> headers = parsedMessage
-                .getHeaders()
-                .subList(1, parsedMessage.getHeaders().size());
-
-        System.out.println("HEADERS: " + headers);
-        System.out.println(parsedMessage.getHeaders());
-        System.out.println(parsedMessage.getHeaders().get(0));
-        System.out.println(parsedMessage.getHeaders().get(0).get(0));
+        List<List<String>> headers = GenericMessageProtocol.firstHeaderIsMessageType(parsedMessage.getHeaders());
 
         switch (parsedMessage.getHeaders().get(0).get(0)) {
-            case "JOIN", "REINITIALIZE" -> {
-                Map<String, String> fields = GenericMessageProtocol.parseBinaryHeaders(headers);
-                System.out.println("FIELDS: " + fields);
+            case "JOIN" -> {
+                List<List<String>> blacklistHeaders = headers.stream()
+                        .filter(header -> header.get(0).equals("blacklist")).toList();
+                List<List<String>> otherHeaders = headers.stream()
+                        .filter(header -> !header.get(0).equals("blacklist")).toList();
+                Map<String, String> fields = GenericMessageProtocol.parseBinaryHeaders(otherHeaders);
+                Map<String, Integer> blacklist = parseBlacklistHeaders(blacklistHeaders);
+
                 GenericMessageProtocol.ensureOnlyContains(fields, Arrays.asList("node", "counter", "port"));
 
                 return new Join(
                         fields.get("node"),
                         Integer.parseInt(fields.get("counter")),
-                        Integer.parseInt(fields.get("port"))
+                        Integer.parseInt(fields.get("port")),
+                        blacklist
+                );
+            }
+            case "REINITIALIZE" -> {
+                List<List<String>> blacklistHeaders = headers.stream()
+                        .filter(header -> header.get(0).equals("blacklist")).toList();
+                List<List<String>> otherHeaders = headers.stream()
+                        .filter(header -> !header.get(0).equals("blacklist")).toList();
+                Map<String, String> fields = GenericMessageProtocol.parseBinaryHeaders(otherHeaders);
+                Map<String, Integer> blacklist = parseBlacklistHeaders(blacklistHeaders);
+
+                GenericMessageProtocol.ensureOnlyContains(fields, Arrays.asList("node", "port"));
+
+                return new Reinitialize(
+                        fields.get("node"),
+                        Integer.parseInt(fields.get("port")),
+                        blacklist
                 );
             }
             case "LEAVE" -> {
@@ -211,22 +257,48 @@ public class MembershipMessageProtocol {
             }
             case "MEMBERSHIP" -> {
                 Map<String, String> fields = GenericMessageProtocol.parseBinaryHeaders(headers);
-                GenericMessageProtocol.ensureOnlyContains(fields, Arrays.asList("members", "log"));
+                GenericMessageProtocol.ensureOnlyContains(fields, List.of("node", "log"), List.of("members"));
 
-                int membersCount = Integer.parseInt(fields.get("members"));
                 int logCount = Integer.parseInt(fields.get("log"));
 
-                List<String> members = parsedMessage
-                        .getBody()
-                        .lines()
-                        .limit(membersCount)
-                        .collect(Collectors.toList());
-                List<MembershipLogEntry> log = parseLogEntries(parsedMessage.getBody(), membersCount, logCount);
 
-                return new Membership(members, log);
+                if (fields.containsKey("members")) {
+                    int membersCount = Integer.parseInt(fields.get("members"));
+                    List<String> members = parsedMessage
+                            .getBody()
+                            .lines()
+                            .limit(membersCount)
+                            .collect(Collectors.toList());
+
+                    List<MembershipLogEntry> log = parseLogEntries(parsedMessage.getBody(), membersCount, logCount);
+
+                    return new Membership(fields.get("node"), members, log);
+                } else {
+                    List<MembershipLogEntry> log = parseLogEntries(parsedMessage.getBody(), logCount);
+                    return new Membership(fields.get("node"), log);
+                }
             }
             default -> throw new MessageProtocolException("Unknown message '"
                     + String.join(" ", parsedMessage.getHeaders().get(0)) + '\'');
         }
+    }
+
+    private static Map<String, Integer> parseBlacklistHeaders(List<List<String>> blacklistHeaders) throws MessageProtocolException {
+        Map<String, Integer> blacklist = new HashMap<>();
+
+        for (List<String> header : blacklistHeaders) {
+            if (header.size() != 3) {
+                throw new MessageProtocolException("Unexpected blacklist header '" + header + '\'');
+            }
+            String key = header.get(1);
+            String value = header.get(2);
+            try {
+                blacklist.put(key, Integer.parseInt(value));
+            } catch (NumberFormatException e) {
+                throw new MessageProtocolException("Unexpected blacklist entry '" + key + " " + value
+                        + "'. Expected integer, got " + value);
+            }
+        }
+        return blacklist;
     }
 }
